--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -31,6 +31,7 @@
     {% load static %}
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static '/css/simple-sidebar.css' %}">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
     
     <script src="{% static '/js/functions_table.js' %}"></script>
     <!-- HACEMOS REFERENCIA AL SCRIPT PARA EL HIDE Y SHOW -->
