--- a/templatedjango/apptemplate/templates/productos/listado_productos.html
+++ b/templatedjango/apptemplate/templates/productos/listado_productos.html
@@ -6,8 +6,8 @@
 
 {% block listado_productos %}
 
-<form action="listado_productos" method="get">
-
+<form action="listado_productos" method="POST">
+  {% csrf_token %}
   <div class="row">
     <div class="form-group col-xl-8">
       <input type="search" class="form-control" name="filtroNombre" placeholder="Escriba lo que desea buscar..." id="">
