--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -157,7 +157,7 @@
               </i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Gestionar Usuario</a>
+              <a class="dropdown-item" href="">Gestionar Usuario</a>
               <!-- <a class="dropdown-item" href="#">Another action</a> -->
               <div class="dropdown-divider"></div>
               <a id="logout_button" class="dropdown-item" href="#">Cerrar Sesion</a>
