bugs en vista insumo por un puntito

--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -53,7 +53,7 @@
 
                                     <!-- <option disabled selected>Medida</option> -->
                                     <option value="uds.">uds.</option>
-                                    <option value="kg">kg.</option>
+                                    <option value="kg.">kg.</option>
 
                                 </select>
 
@@ -144,7 +144,7 @@
 
                                                 </select>
 
-                                                <script language="Javascript1.5">
+                                                <script>
                                                     var elements = document.getElementsByClassName('productos{{insumo.id}}')
                                                     // elements[1].setAttribute('selected','selected')
                                                     var select = document.getElementById('select{{insumo.id}}')
