--- a/templatedjango/apptemplate/templates/produccion/listado_produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/listado_produccion.html
@@ -52,8 +52,7 @@
 
                                                 <div class="form-group">
                                                     <label for="fecha_produccion">Fecha de Inicio:</label>
-                                                    <input type="date" readonly class="form-control" id="fecha"
-                                                        placeholder="Fecha de Inicio">
+                                                    <input type="date" readonly class="form-control" id="fecha" placeholder="Fecha de Inicio">
                                                 </div>
 
 
